--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -5,7 +5,8 @@
 input[type="text"] {
     color: #b8b8b8;
     border: 1px solid #d4d4d4;
-    background-color: #f5f5f5;
+    /*background-color: #f5f5f5;*/
+    background-color: #4B4C4C;
     padding: 4px;
 }
 
@@ -50,21 +51,27 @@ body {
 
 /* move the project menu to the right */
 #main-menu { 
-    left: auto;
-    right: 0px;
+    margin: 30px 0 30px 260px;
+    /*right: 0px;*/
 }
 
+#main {
+    background-color: #4B4C4C;
+}
 
 #main #content {
-    background-color: #b8b8b8;
+    /*background-color: #b8b8b8;*/
+    background-color: #4B4C4C;
 }
 
 #content h1,
 #content h2,
 #content h3,
 #content h4 {
-    color: #222;
+    /*color: #222;*/
+    color: #fff;
 }
+
 
 #main #content .splitcontentright {
     float: none;
@@ -79,8 +86,13 @@ body {
 }
 
 
+#main div.projects h3 {
+    background: none;
+}
+
 #main #sidebar {
-    background-color: #b8b8b8;
+    /*background-color: #b8b8b8;*/
+    background: transparent;
 }
 
 
@@ -100,4 +112,38 @@ body {
 
 #footer {
     background: #303030;
+}
+
+/* links styling */
+#main a {
+  color: #fff;
+  text-decoration: underline;
+}
+
+#main a:hover,
+#main a:active,
+#main a:visited {
+   color: #27AEBE;
+}
+
+
+/* separate elems style */
+table {
+  /*width: auto!important;*/
+}
+
+table.cal td.today {
+  /*border-left: 2px solid #22E8FF;*/
+  background-color: none;
+}
+
+table.cal td.today p.day-num {
+  border: 2px solid #0AD761;
+  display: inline;
+  float: right;
+  padding: 4px;
+  border-radius: 100%;
+  -mox-border-radius: 100%;
+  -webkit-border-radius: 100%;
+  line-height: normal;
 }
