--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -105,7 +105,7 @@ body {
 .warning {
   color: inherit;
   background: inherit;
-  border-color: #e4e4e4;
+  border: 1px dashed #e4e4e4;
   border-width: 1px;
 }
 
@@ -130,6 +130,15 @@ body {
 /* separate elems style */
 table {
   /*width: auto!important;*/
+  border: 1px dashed #e4e4e4!important;
+}
+
+table tr {
+  background-color: transparent!important;
+}
+
+table thead * {
+  background-color: #AAA!important;
 }
 
 table.cal td.today {
@@ -146,4 +155,7 @@ table.cal td.today p.day-num {
   -mox-border-radius: 100%;
   -webkit-border-radius: 100%;
   line-height: normal;
-}
+}Latest projects
+
+Sidebar wrong float (07/11/2014 01:37 AM)
+New_Theme (07/10/2014 11:04 PM)
